--- a/frontend/catalogs.html
+++ b/frontend/catalogs.html
@@ -255,6 +255,7 @@
 					},
 					body: JSON.stringify({
 						scraper: this.selectedScraper,
+						catalog: this.selectedCatalog,
 						scraper_links: scraper_links
 					})
 				})
