--- a/frontend/catalogs.html
+++ b/frontend/catalogs.html
@@ -275,6 +275,21 @@
 					})
 				})
 				.catch(err => console.log(err))
+			},
+			downloadImages: async function(catalog, scraper){
+				let options = {
+					method: 'POST',
+					headers: {
+						'Content-Type': 'application/json'
+					},
+					body: JSON.stringify({
+						catalog: catalog,
+						scraper: scraper,
+					})
+				}
+
+				return await requestHandler(`${apis.catalogsEndpointUrl}/download-images`, options)
+				.catch(err => console.log(err))
 			}
 		}
 	}
